api/swim_form/src/tests/derive/form/newtype_multi_field_struct.stderr
error: Cannot apply `newtype` attribute to a struct with multiple fields
  --> src/tests/derive/form/newtype_multi_field_struct.rs:5:5
   |
5  | /     #[form(newtype)]
6  | |     struct A{
7  | |         a: i32,
8  | |         b: i32,
9  | |         #[form(skip)]
10 | |         c: i32,
11 | |     }
   | |_____^
